--- a/admin_panel/templates/admin_panel/dashboard.html
+++ b/admin_panel/templates/admin_panel/dashboard.html
@@ -142,7 +142,7 @@
                             <img src="{{booking.user.profile_image.url}}" alt="" width="35px" height="35px" class="me-3"
                                 style="border-radius: 50%;">
                             {% else %}
-                            <img src="{% static 'media/user_icon.png' %}" alt="" width="35px" height="35px" class="me-3"
+                            <img src="{% static 'images/user_icon.png' %}" alt="" width="35px" height="35px" class="me-3"
                                 style="border-radius: 50%;">
                             {% endif %}
 
