--- a/admin_panel/templates/admin_panel/vehicledetails.html
+++ b/admin_panel/templates/admin_panel/vehicledetails.html
@@ -203,7 +203,7 @@
                             <img src="{{comment.user.profile_image.url}}" class="img-fluid"
                                 style="width: 70px !important; height: 70px !important; border-radius: 50%;" alt="...">
                             {% else %}
-                            <img src="{% static 'media/user_icon.png' %}" class="img-fluid"
+                            <img src="{% static 'images/user_icon.png' %}" class="img-fluid"
                                 style="width: 70px !important; height: 70px !important; border-radius: 50%;" alt="...">
                             {% endif %}
                         </div>
