--- a/main_site/templates/main_site/car_details.html
+++ b/main_site/templates/main_site/car_details.html
@@ -174,7 +174,7 @@
                                                 style="width: 50px !important; height: 50px !important; border-radius: 50%;"
                                                 alt="...">
                                             {% else %}
-                                            <img src="{% static 'media/user_icon.png' %}" class="img-fluid"
+                                            <img src="{% static 'images/user_icon.png' %}" class="img-fluid"
                                                 style="width: 50px !important; height: 50px !important; border-radius: 50%;"
                                                 alt="...">
                                             {% endif %}
