--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -54,7 +54,7 @@
     }
 
     .form_left {
-        background-image: url('{% static "media/form_side_image.jpg" %}');
+        background-image: url('{% static "images/form_side_image.jpg" %}');
         min-height: 30vh;
         background-repeat: no-repeat;
         background-size: cover;
