--- a/admin_panel/templates/admin_panel/manage_site.html
+++ b/admin_panel/templates/admin_panel/manage_site.html
@@ -96,7 +96,7 @@
                             {% if review.user.profile_image %}
                             <img src="{{review.user.profile_image.url}}" width="30px" height="30px" alt="">
                             {% else %}
-                            <img src="{% static 'media/user_icon.png' %}" width="30px" height="30px" alt="">
+                            <img src="{% static 'images/user_icon.png' %}" width="30px" height="30px" alt="">
                             {% endif %}
                             <span class="ms-2">{{review.user.username}}</span>
 
