--- a/admin_panel/templates/admin_panel/user_list.html
+++ b/admin_panel/templates/admin_panel/user_list.html
@@ -30,7 +30,7 @@
                         <img src="{{user.profile_image.url}}" width="35px" height="35px" style="border-radius: 50%;"
                             alt="">
                         {% else %}
-                        <img src="{% static 'media/user_icon.png' %}" width="35px" height="35px"
+                        <img src="{% static 'images/user_icon.png' %}" width="35px" height="35px"
                             style="border-radius: 50%;" alt="">
                         {% endif %}
                     </td>
