--- a/main_site/templates/main_site/faq.html
+++ b/main_site/templates/main_site/faq.html
@@ -60,7 +60,7 @@
         background-position: center;
         background-blend-mode: darken;
         background-color: rgba(0, 0, 0, .5);
-        background-image: url('{% static "media/form_side_image.jpg" %}');
+        background-image: url('{% static "images/form_side_image.jpg" %}');
         clip-path: polygon(0% 0%, 100% 0, 100% 90%, 50% 100%, 0% 90%);
     }
 
