--- a/main_site/templates/main_site/home.html
+++ b/main_site/templates/main_site/home.html
@@ -6,7 +6,7 @@
 <div class="col-12">
     <!-- ======================================================= HERO BANNER =========================================================== -->
     <section class="hero-banner mb-5">
-        <video src="{% static 'media/background_video.mp4' %}" autoplay loop muted></video>
+        <video src="{% static 'images/background_video.mp4' %}" autoplay loop muted></video>
         <div class="carousel-wrapper col-12 d-flex align-items-center justify-content-center">
 
             {% if request.user.is_authenticated %}
@@ -18,7 +18,7 @@
                 <img src="{{request.user.profile_image.url}}" width="30px" height="30px" style="border-radius: 50%;"
                     alt="">
                 {% else %}
-                <img src="{% static 'media/user_icon.png' %}" width="30px" height="30px" class="bg-white"
+                <img src="{% static 'images/user_icon.png' %}" width="30px" height="30px" class="bg-white"
                     style="border-radius: 50%;" alt="">
                 {% endif %}
 
@@ -49,12 +49,12 @@
                                 {{new_car.vehicle.vehicle_model}}</h5>
                             <div class="d-flex justify-content-start">
                                 <div class="pe-2 text-center text-white">
-                                    <img src="{% static 'media/car_wheel.png' %}" width="20px" height="20px"
+                                    <img src="{% static 'images/car_wheel.png' %}" width="20px" height="20px"
                                         style="filter: invert(100%);" alt="" class="img-fluid">
                                     <p class="mt-1">{{new_car.vehicle.drive}}</p>
                                 </div>
                                 <div class="pe-2 text-center text-white">
-                                    <img src="{% static 'media/transmission.png' %}" width="20px" height="20px"
+                                    <img src="{% static 'images/transmission.png' %}" width="20px" height="20px"
                                         style="filter: invert(100%);" alt="" class="img-fluid">
                                     <p class="mt-1">
                                         {% if new_car.vehicle.transmission == "manual" %}
@@ -65,7 +65,7 @@
                                     </p>
                                 </div>
                                 <div class="pe-2 text-center text-white">
-                                    <img src="{% static 'media/engine.jpg' %}" width="20px" height="20px"
+                                    <img src="{% static 'images/engine.jpg' %}" width="20px" height="20px"
                                         style="filter: invert(100%);" alt="" class="img-fluid">
                                     <p class="mt-1">{{new_car.vehicle.horsepower}}</p>
                                 </div>
@@ -103,7 +103,7 @@
                 {% endfor %}
             </div>
             <div class="col-12 col-md-6">
-                <img src="{% static 'media/about_us_image.jpg' %}" width="100%" alt=""
+                <img src="{% static 'images/about_us_image.jpg' %}" width="100%" alt=""
                     style="clip-path: polygon(10% 0, 100% 0, 100% 100%, 20% 100%, 20% 50%, 0 50%); filter: brightness(70%);">
             </div>
         </div>
@@ -125,12 +125,12 @@
                             <h5 class="card-title">{{vehicle.brand.brand_name}} {{vehicle.vehicle_model}}</h5>
                             <div class="d-flex justify-content-start">
                                 <div class="pe-2 text-center text-white">
-                                    <img src="{% static 'media/car_wheel.png' %}" width="20px" height="20px"
+                                    <img src="{% static 'images/car_wheel.png' %}" width="20px" height="20px"
                                         style="filter: invert(100%);" alt="" class="img-fluid">
                                     <p class="mt-1">{{vehicle.drive}}</p>
                                 </div>
                                 <div class="pe-2 text-center text-white">
-                                    <img src="{% static 'media/transmission.png' %}" width="20px" height="20px"
+                                    <img src="{% static 'images/transmission.png' %}" width="20px" height="20px"
                                         style="filter: invert(100%);" alt="" class="img-fluid">
                                     <p class="mt-1">
                                         {% if vehicle.transmission == "manual" %}
@@ -141,7 +141,7 @@
                                     </p>
                                 </div>
                                 <div class="pe-2 text-center text-white">
-                                    <img src="{% static 'media/engine.jpg' %}" width="20px" height="20px"
+                                    <img src="{% static 'images/engine.jpg' %}" width="20px" height="20px"
                                         style="filter: invert(100%);" alt="" class="img-fluid">
                                     <p class="mt-1">{{vehicle.horsepower}}</p>
                                 </div>
@@ -203,7 +203,7 @@
                         <img src="{{review.user.profile_image.url}}" width="70px" height="70px"
                             style="border-radius: 50%;" alt="">
                         {% else %}
-                        <img src="{% static 'media/user_icon.png' %}" width="50px" height="50px" class="bg-white"
+                        <img src="{% static 'images/user_icon.png' %}" width="50px" height="50px" class="bg-white"
                             style="border-radius: 50%;" alt="">
                         {% endif %}
                         <h5 class="mt-3">{{review.user.username}}</h5>
