--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -38,7 +38,7 @@
 
 <style>
     footer {
-        background-image: url('{% static "media/footer-bg.jpg" %}');
+        background-image: url('{% static "images/footer-bg.jpg" %}');
         background-size: cover;
         background-repeat: no-repeat;
         background-blend-mode: darken;
