--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -39,7 +39,7 @@
                         <img src="{{request.user.profile_image.url}}" width="30px" height="30px"
                             style="border-radius: 50%;" alt="">
                         {% else %}
-                        <img src="{% static 'media/user_icon.png' %}" width="30px" height="30px" class="bg-white"
+                        <img src="{% static 'images/user_icon.png' %}" width="30px" height="30px" class="bg-white"
                             style="border-radius: 50%;" alt="">
                         {% endif %}
                     </button>
