--- a/user/templates/user/edit_profile.html
+++ b/user/templates/user/edit_profile.html
@@ -12,7 +12,7 @@
                 {% if user.profile_image %}
                 <img src="{{user.profile_image.url}}" width="200px" height="200px" class="profile_img mx-auto" alt="">
                 {% else %}
-                <img src="{% static 'media/user_icon.png' %}" width="200px" height="200px" class="profile_img mx-auto"
+                <img src="{% static 'images/user_icon.png' %}" width="200px" height="200px" class="profile_img mx-auto"
                     alt="">
                 {% endif %}
                 <h4 class="text-center my-2">{{user.username}}</h4>
