--- a/admin_panel/templates/admin_panel/dashboard.html
+++ b/admin_panel/templates/admin_panel/dashboard.html
@@ -112,7 +112,53 @@
         </div>
 
 
-        
+        <!-- DASHBOARD GRAPH -->
+        <div class="col mx-2 my-3 bg-white shadow-sm">
+            <!-- PULLING OUT ALL THE DATA -->
+            <ul class="d-none">
+                {% for revenue in revenue_list %}
+                <li id="day{{forloop.counter}}">{{revenue}}</li>
+                {% endfor %}
+                {% for last_week_revenue in last_week_revenue_list %}
+                <li id="last_week_day{{forloop.counter}}">{{last_week_revenue}}</li>
+                {% endfor %}
+                {% for bookings in bookings_this_week %}
+                <li id="bookings_day{{forloop.counter}}">{{bookings}}</li>
+                {% endfor %}
+                {% for bookings in bookings_last_week %}
+                <li id="last_week_bookings_day{{forloop.counter}}">{{bookings}}</li>
+                {% endfor %}
+            </ul>
+            <!-- THIS AND LAST WEEK -->
+            <div class="d-flex flex-wrap">
+                <div class="col d-block d-md-flex">
+                    <div class="d-flex align-items-center p-3">
+                        <small class="me-2">Revenue (Week to date):</small>
+                        <h5>$<span id="total_revenue_this_week">0</span></h5>
+                    </div>
+                    <div class="d-flex align-items-center p-3">
+                        <small class="me-2">Revenue (Week before):</small>
+                        <h5>$<span id="total_revenue_last_week">0</span></h5>
+                    </div>
+                </div>
+                <div class="col d-block d-md-flex">
+                    <div class="d-flex align-items-center p-3">
+                        <small class="me-2">Bookings (Week to date):</small>
+                        <h5><span id="total_bookings_this_week">0</span></h5>
+                    </div>
+                    <div class="d-flex align-items-center p-3">
+                        <small class="me-2">Bookings (Week before):</small>
+                        <h5><span id="total_bookings_last_week">0</span></h5>
+                    </div>
+                </div>
+            </div>
+            <div class="d-block d-md-flex" style="overflow: hidden;">
+                <!-- THIS WEEK'S REVENUE GRAPH -->
+                <div id="rev" class="col-12 col-md-6 p-0 mx-auto"></div>
+                <!-- THIS WEEK'S BOOKING GRAPH -->
+                <div id="vol" class="col-12 col-md-6 p-0 mx-auto"></div>
+            </div>
+        </div>
 
 
         <div class="col-12 p-2 mt-4">
@@ -142,8 +188,8 @@
                             <img src="{{booking.user.profile_image.url}}" alt="" width="35px" height="35px" class="me-3"
                                 style="border-radius: 50%;">
                             {% else %}
-                            <img src="{% static 'images/user_icon.png' %}" alt="" width="35px" height="35px" class="me-3"
-                                style="border-radius: 50%;">
+                            <img src="{% static 'images/user_icon.png' %}" alt="" width="35px" height="35px"
+                                class="me-3" style="border-radius: 50%;">
                             {% endif %}
 
                             <h5 style="font-size: 19px;">{{booking.user.username}}</h5>
@@ -217,6 +263,103 @@
 
     if (bookings.length == 0) {
         $(".no_bookings").removeClass("d-none")
+    }
+
+    var total_revenue = parseInt($("#day1").text()) + parseInt($("#day2").text()) + parseInt($("#day3").text()) +
+        parseInt($("#day4").text()) + parseInt($("#day5").text()) + parseInt($("#day6").text()) + parseInt($("#day7")
+            .text())
+    var total_revenue_last_week = parseInt($("#last_week_day1").text()) + parseInt($("#last_week_day2").text()) +
+        parseInt($("#last_week_day3").text()) +
+        parseInt($("#last_week_day4").text()) + parseInt($("#last_week_day5").text()) + parseInt($("#last_week_day6")
+            .text()) + parseInt($("#last_week_day7")
+            .text())
+    var total_bookings = parseInt($("#bookings_day1").text()) + parseInt($("#bookings_day2").text()) + parseInt($(
+            "#bookings_day3").text()) +
+        parseInt($("#bookings_day4").text()) + parseInt($("#bookings_day5").text()) + parseInt($("#bookings_day6")
+        .text()) + parseInt($("#bookings_day7")
+            .text())
+    var total_bookings_last_week = parseInt($("#last_week_bookings_day1").text()) + parseInt($(
+            "#last_week_bookings_day2").text()) +
+        parseInt($("#last_week_bookings_day3").text()) +
+        parseInt($("#last_week_bookings_day4").text()) + parseInt($("#last_week_bookings_day5").text()) + parseInt($(
+                "#last_week_bookings_day6")
+            .text()) + parseInt($("#last_week_bookings_day7")
+            .text())
+    $("#total_revenue_this_week").text(total_revenue)
+    $("#total_revenue_last_week").text(total_revenue_last_week)
+    $("#total_bookings_this_week").text(total_bookings)
+    $("#total_bookings_last_week").text(total_bookings_last_week)
+
+    $(".graph_of").click(() => {
+        $(".graph_of i").toggleClass("far fa-circle fas fa-circle-dot")
+    })
+
+    // CHART JS CONTROLS
+    google.charts.load('current', {
+        'packages': ['corechart']
+    });
+    google.charts.setOnLoadCallback(drawChartRev);
+    google.charts.setOnLoadCallback(drawChartVol);
+
+
+    function drawChartRev() {
+        var data = google.visualization.arrayToDataTable([
+            ['Past 7 days', 'Week to date', 'Week before'],
+            ['1', parseInt($("#day7").text()), parseInt($("#last_week_day7").text())],
+            ['2', parseInt($("#day6").text()), parseInt($("#last_week_day6").text())],
+            ['3', parseInt($("#day5").text()), parseInt($("#last_week_day5").text())],
+            ['4', parseInt($("#day4").text()), parseInt($("#last_week_day4").text())],
+            ['5', parseInt($("#day3").text()), parseInt($("#last_week_day3").text())],
+            ['6', parseInt($("#day2").text()), parseInt($("#last_week_day2").text())],
+            ['7', parseInt($("#day1").text()), parseInt($("#last_week_day1").text())]
+        ]);
+
+        var options = {
+            title: 'Revenue',
+            hAxis: {
+                title: 'Past 7 days',
+                titleTextStyle: {
+                    color: '#333'
+                }
+            },
+            vAxis: {
+                minValue: 0
+            },
+            height: 300
+        };
+
+        var chart = new google.visualization.AreaChart(document.getElementById('rev'));
+        chart.draw(data, options);
+    }
+
+    function drawChartVol() {
+        var data = google.visualization.arrayToDataTable([
+            ['Past 7 days', 'Week to date', 'Week before'],
+            ['1', parseInt($("#bookings_day7").text()), parseInt($("#last_week_bookings_day7").text())],
+            ['2', parseInt($("#bookings_day6").text()), parseInt($("#last_week_bookings_day6").text())],
+            ['3', parseInt($("#bookings_day5").text()), parseInt($("#last_week_bookings_day5").text())],
+            ['4', parseInt($("#bookings_day4").text()), parseInt($("#last_week_bookings_day4").text())],
+            ['5', parseInt($("#bookings_day3").text()), parseInt($("#last_week_bookings_day3").text())],
+            ['6', parseInt($("#bookings_day2").text()), parseInt($("#last_week_bookings_day2").text())],
+            ['7', parseInt($("#bookings_day1").text()), parseInt($("#last_week_bookings_day1").text())]
+        ]);
+
+        var options = {
+            title: 'Bookings',
+            hAxis: {
+                title: 'Past 7 days',
+                titleTextStyle: {
+                    color: '#333'
+                }
+            },
+            vAxis: {
+                minValue: 0
+            },
+            height: 300
+        };
+
+        var chart = new google.visualization.AreaChart(document.getElementById('vol'));
+        chart.draw(data, options);
     }
 </script>
 {% endblock main %}
