--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -12,7 +12,7 @@
                     <a class="nav-link text-white active" aria-current="page" href="{% url 'home' %}">Home</a>
                 </li>
                 <li class="nav-item px-2">
-                    <a class="nav-link text-white" href="{% url 'cars' %}">Cars</a>
+                    <a class="nav-link text-white" href="{% url 'cars' %}">Our fleet</a>
                 </li>
                 <li class="nav-item px-2">
                     <a class="nav-link text-white" href="{% url 'faqs' %}">FAQ</a>
