--- a/main_site/templates/main_site/home.html
+++ b/main_site/templates/main_site/home.html
@@ -6,7 +6,7 @@
 <div class="col-12">
     <!-- ======================================================= HERO BANNER =========================================================== -->
     <section class="hero-banner mb-5">
-        <video src="{% static 'images/background_video.mp4' %}" autoplay loop muted></video>
+        <video src="{% static 'images/background_video_.mp4' %}" autoplay loop muted></video>
         <div class="carousel-wrapper col-12 d-flex align-items-center justify-content-center">
 
             {% if request.user.is_authenticated %}
@@ -225,6 +225,8 @@
         height: fit-content;
         max-height: 100vh;
         overflow: hidden !important;
+        display: flex;
+        align-items: center;
     }
 
     .hero-banner video {
