Clean up code 2nd phase

--- a/templates/partials/sidenav.html
+++ b/templates/partials/sidenav.html
@@ -1,3 +1,4 @@
+<!-- SIDENAV -->
 <div class="sidenav col-12 p-3 p-md-4 d-flex flex-wrap align-items-center">
     <h4 class="text-white">FAST CARS</h4>
     <ul class="p-0 m-0 col-12" id="links1">
@@ -18,6 +19,7 @@
 <button class="btn sidebar-toggler text-white d-block d-lg-none"><i class="fas fa-bars"></i></button>
 
 
+<!-- STYLES -->
 <style>
     .sidenav{
         height: 100vh;
@@ -85,6 +87,7 @@
     }
 </style>
 
+<!-- SCRIPTS -->
 <script>
     $(document).ready(function(){
         $("button.sidebar-toggler").click(() => {
