--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,4 +1,5 @@
 {% load static %}
+<!-- NAVBAR -->
 <nav class="navbar navbar-expand-md fixed-top py-2">
     <div class="container">
         <a class="navbar-brand text-white fs-3" href="{% url 'home' %}">FastCars</a>
@@ -7,6 +8,7 @@
             <span class="fas fa-bars text-light"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
+            <!-- NAV LINKS -->
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item px-2">
                     <a class="nav-link text-white active" aria-current="page" href="{% url 'home' %}">Home</a>
@@ -23,6 +25,7 @@
             </ul>
 
 
+            <!-- IF USER IS NOT LOGGED IN, SHOW LOGIN AND SIGNUP BUTTON. ELSE, SHOW THEIR ACTIVITY NAVIGATION DROPDOWN. -->
             {% if not request.user.is_authenticated %}
             <div class="d-flex">
                 <a href="{% url 'login' %}" class="btn btn-outline-light rounded-0 px-4">Login</a>
@@ -44,16 +47,17 @@
                         {% endif %}
                     </button>
                     <ul class="dropdown-menu bg-transparent border-0">
-                        <li class="py-2"><a class="dropdown-item ms-auto btn text-dark shadow-sm" href="{% url 'edit_profile' %}"><i
-                                    class="fa-solid fa-user-pen"></i></a></li>
-                        <li class="py-2"><a class="dropdown-item ms-auto btn text-dark shadow-sm" href="{% url 'booking_history' %}"><i
-                                    class="fa-solid fa-clock-rotate-left"></i></a></li>
+                        <li class="py-2"><a class="dropdown-item ms-auto btn text-dark shadow-sm"
+                                href="{% url 'edit_profile' %}"><i class="fa-solid fa-user-pen"></i></a></li>
+                        <li class="py-2"><a class="dropdown-item ms-auto btn text-dark shadow-sm"
+                                href="{% url 'booking_history' %}"><i class="fa-solid fa-clock-rotate-left"></i></a>
+                        </li>
                         {% if request.user.is_staff %}
-                        <li class="py-2"><a class="dropdown-item ms-auto btn text-dark shadow-sm" href="{% url 'dashboard' %}"><i
-                                    class="fa-solid fa-chart-line"></i></a></li>
+                        <li class="py-2"><a class="dropdown-item ms-auto btn text-dark shadow-sm"
+                                href="{% url 'dashboard' %}"><i class="fa-solid fa-chart-line"></i></a></li>
                         {% endif %}
-                        <li class="py-2"><a class="dropdown-item ms-auto btn text-dark shadow-sm" href="{% url 'logout' %}"><i
-                                    class="fa-solid fa-right-from-bracket"></i></a></li>
+                        <li class="py-2"><a class="dropdown-item ms-auto btn text-dark shadow-sm"
+                                href="{% url 'logout' %}"><i class="fa-solid fa-right-from-bracket"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -63,6 +67,7 @@
     </div>
 </nav>
 
+<!-- LOGGED IN USER ACTIVITY NAV FOR SMALL SCREEN SIZE. -->
 {% if request.user.is_authenticated %}
 <div class="d-block d-md-none user_activities_wrapper">
 
@@ -73,8 +78,8 @@
         <ul class="dropdown-menu bg-transparent border-0">
             <li class="py-2"><a class="dropdown-item ms-auto btn text-dark shadow-sm" href="{% url 'edit_profile' %}"><i
                         class="fa-solid fa-user-pen"></i></a></li>
-            <li class="py-2"><a class="dropdown-item ms-auto btn text-dark shadow-sm" href="{% url 'booking_history' %}"><i
-                        class="fa-solid fa-clock-rotate-left"></i></a></li>
+            <li class="py-2"><a class="dropdown-item ms-auto btn text-dark shadow-sm"
+                    href="{% url 'booking_history' %}"><i class="fa-solid fa-clock-rotate-left"></i></a></li>
             {% if request.user.is_staff %}
             <li class="py-2"><a class="dropdown-item ms-auto btn text-dark shadow-sm" href="{% url 'dashboard' %}"><i
                         class="fa-solid fa-chart-line"></i></a></li>
@@ -101,7 +106,7 @@
         background: white;
     }
 
-    .user_activities .dropdown-item:hover{
+    .user_activities .dropdown-item:hover {
         color: white !important;
         background: rgb(0, 0, 44);
     }
@@ -137,5 +142,5 @@
         }
     }
 
-    $(".user_activities .dropdown-menu").css("margin-left","-140%")
+    $(".user_activities .dropdown-menu").css("margin-left", "-140%")
 </script>
