--- a/assets/admin/css/changelists.css
+++ b/assets/admin/css/changelists.css
@@ -125,11 +125,15 @@
     margin-right: 4px;
 }
 
+#changelist-search .help {
+    word-break: break-word;
+}
+
 /* FILTER COLUMN */
 
 #changelist-filter {
+    flex: 0 0 240px;
     order: 1;
-    width: 240px;
     background: var(--darkened-bg);
     border-left: none;
     margin: 0 0 0 30px;
@@ -313,7 +317,6 @@
 #changelist .actions select {
     vertical-align: top;
     height: 24px;
-    background: none;
     color: var(--body-fg);
     border: 1px solid var(--border-color);
     border-radius: 4px;
